k8syamlfiles/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-backend
  namespace: app1
  labels:
    app: app1-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app1-backend
  template:
    metadata:
      labels:
        app: app1-backend
    spec:
      containers:
        - name: backend
          image: mohammadalaa953/taskmanagerk8strial:backend-331ed48
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: app1-backend-service
  namespace: app1
spec:
  selector:
    app: app1-backend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      #nodePort: 30001
  #type: NodePort
  type: ClusterIP
