k8syamlfiles/documentaiondeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc-site-nginx
  namespace: app1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-test
  template:
    metadata:
      labels:
        app: nginx-test
    spec:
      containers:
        - name: nginx
          image: mohammadalaa953/staticsitek8s:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-test-service
  namespace: app1
spec:
  selector:
    app: nginx-test
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
