k8syamlfiles/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1-frontend
  namespace: app1
  labels:
    app: app1-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app1-frontend
  template:
    metadata:
      labels:
        app: app1-frontend
    spec:
      containers:
        - name: frontend
          image: mohammadalaa953/taskmanagerk8s:frontend
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: app1-frontend-service
  namespace: app1
spec:
  selector:
    app: app1-frontend
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
